fix: código de acordo com sonar